--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "doot",
-  "version": "0.1.0",
+  "name": "chat",
+  "version": "1.1.0",
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.8.1",
